Add an empty property to the card info

--- a/src/credit-card/View.scss
+++ b/src/credit-card/View.scss
@@ -22,6 +22,7 @@
 			border: 1px solid $border-grey-light;
 			background-color: $panel-background;
 			padding: 0 0.625rem;
+			min-height: 34px;
 		}
 
 		.card-number {
